@@ -1,5 +1,15 @@
 2008-07-06  Bradley M. Kuhn  <bkuhn@ebb.org>
 
+	* tests/test-pokerrenderer.py.in
+	(PokerInteractorsTests.MockConfig): Created mock up.
+	(PokerInteractorsTests.MockPokerRenderer): Wrote method.
+	(PokerInteractorsTests.MockPokerRenderer.render): Wrote method.
+	(PokerInteractorsTests.test02_interactorDisplayNodeUnknownGame):
+	Wrote method.
+	(PokerInteractorsTests.MockPokerProtocol.getCurrentGameId): Wrote
+	method.
+	(PokerInteractorsTests.MockSettings): Created mock up.
+
 	* tests/testmessages.py: Added PokerInteractors to list of classes.
 
 	* pokerui/pokerrenderer.py (PokerInteractors.error): Added method.
